# TrustMesh

./: .gitignore  CLAUDE.md  LITERATURE_REVIEW.md  PROJECT_EXPLAINER.md  README.md  TrustMesh_Enterprise_Roadmap.md  TrustMesh_Implementation_Roadmap.md  TrustMesh_Roadmap_v2_3Week_Cutline.md  TrustMesh_SaaS_Architecture (1).md  count_scenarios.py  do_screenshots.py  docker-compose.staging.yml  docker-compose.yml  eval_3x_results_limit8.txt  eval_3x_results_unbuffered.txt  fix_svg.py  parse_prod.py  qa_lighthouse_prod.json  render.yaml  run_3x.py  run_3x_limit8.py  scratch_eval.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  apply_patch.py  calc.py  create_test_session.py  fix_tests.py  lighthouse_parse.py  pytest_full_out.txt  qa_node_error.txt  query_db.py  query_db_postgres.py  query_event.py  query_latest.py  requirements.txt  run_all.ps1  run_auth_test.py  run_auth_test_2.py  run_auth_test_3.py  run_sc.ps1  run_server_fixed.py  sc_results.txt  start.sh  test_api.py  test_auth_client.py  test_init_db.py  test_postgres.py  test_standard_uvicorn.py  verify_independence.py
docs/: AGENT_TASKS.md  DEFENSE_ONE_PAGER.md  DEFENSE_PREP.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EVAL_RESULTS.md  FAQ.md  KNOWN_ISSUES.md  LOAD_TEST_RESULTS.md  ML_MODEL_RESULTS.md  NEXT_TASKS_HANDOFF.md  PARKED_FEATURES.md  PHASES.md  PROJECT_REPORT.md  PROJECT_STATUS_SUMMARY.md  SECRETS_AUDIT.md  TRAINING_DATA_MANIFEST.md  TRUSTMESH_BENCH.md  TrustMesh_Master_Roadmap.md  phase-0.md  (+12 more)
sdk/: README.md  conftest.py  pyproject.toml
sdk/examples/: autogen_adapter_demo.py  crewai_adapter_demo.py  minimal_agent_loop.py
sdk/tests/: test_autogen_adapter.py  test_backend_parity.py  test_crewai_adapter.py  test_generic_adapter.py  test_langchain_adapter.py  test_watcher.py
sdk/trustmesh/: __init__.py  _crypto.py  _primitives.py  watcher.py
sdk/trustmesh/adapters/: __init__.py  autogen.py  crewai.py  generic.py  langchain.py
(+282 files in other folders)
