[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trustmesh-sdk"
version = "0.1.0"
description = "Thin, framework-agnostic, tamper-evident audit layer for AI-agent conversations (Ed25519 signing + SHA-256 hash chain)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "cryptography>=40",
]

[project.optional-dependencies]
test = ["pytest>=7"]

# NOTE: the crypto primitives are currently imported from the sibling
# `backend/` package (see trustmesh/_crypto.py). A fully standalone
# distribution — vendoring those primitives or extracting a shared
# `trustmesh-core` — is planned follow-on work. For now this package is
# intended to be used from a repository checkout.
[tool.setuptools]
packages = ["trustmesh"]
