[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trustmesh-sdk"
version = "0.1.0"
description = "Thin, framework-agnostic, tamper-evident audit layer for AI-agent conversations (Ed25519 signing + SHA-256 hash chain)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "cryptography>=40",
]

[project.optional-dependencies]
test = ["pytest>=7"]
# Optional framework adapters (trustmesh/adapters/*). The core package does not
# depend on these; install the extra for the integration you use.
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.100"]
autogen = ["autogen-agentchat>=0.4"]


# The crypto primitives are vendored (trustmesh/_primitives.py), so this package
# is standalone at runtime — its only dependency is `cryptography`. Byte-for-byte
# parity with the TrustMesh backend is asserted by tests/test_backend_parity.py.
[tool.setuptools]
packages = ["trustmesh", "trustmesh.adapters"]
